# summarise-sci-literature

./: .gitignore  .pre-commit-config.yaml  Gemini_summarise_AI_literature.ipynb  README.md  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: Gemini_summarise_AI_literature.ipynb  tools.ipynb
src/: __init__.py  agent.py  agents.py  app.py  constants.py  gemini_summarise_ai_literature.py  get_arxiv_papers.py  local_testing.py  logs.txt  main.py  prompts.py  tools.py  utils.py
