[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sci-summarizer"
version = "0.0.1"
dependencies = [
  "pydantic",
  "pydantic-ai",
  "requests",
  "beautifulsoup4",
  "pandas",
  "lxml",
  "tabulate",
  "pymupdf"
]
requires-python = ">=3.11"

classifiers = [
  "Development Status :: 1.0",
  "Programming Language :: Python :: 3"
]

[tool.setuptools]
py-modules = [
  "src"]


[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest"
]
